--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "firstapp",
+  "name": "megathon_hosting",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Abhigyan Ghosh",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
